@@ -1,4 +1,7 @@
 This file contains a summary of changes made and why.
+2020Jun08 Removed broadband stuff from ../skdrincl/statn.ftni and put in ../skdrincl/broadband.
+2020Jun08 Added staiton dependent parameter ibb_off for extra time in writing: 
+          skrdrini.f, sanp.f, read_broadband_section.f. Also initialize to 0 broadband stuff in skdrini.f
 2020May29 snap.f. Fixed bug where if a station had early start then there would be no PREOB. 
 2020Feb20 proc_dbbc_bbc.f, proc_lba_ifp.f, proc_mracks_vc.f proc_vracks_bbc.f,proc_vc_cmd.f. Added implicit none.
           Also added luscn to routines invalid_if
